# rosbot-demo-wifi-heatmap

./: .gitignore  .gitignotre  .gitmodules  Dockerfile  README.md  fakenet.sh  net_expose.sh
docker-compose/: .env  .env.template  compose.pc.husarnet.yaml  compose.pc.yaml  compose.rosbot.husarnet.yaml  compose.rosbot.yaml
docker-compose/config/: amcl_params.yaml  rosbot_pro_mapping.rviz  slam_params.yaml
docker_compose/: compose.pc.husarnet.yaml  compose.pc.yaml
map_handler_packages/: Dockerfile  save_map.sh
mapper-packages/: Dockerfile
mapper-packages/mappers_bringup/: CMakeLists.txt  package.xml
mapper-packages/mappers_bringup/launch/: mappers.launch.py
mapper-packages/rosbot_interfaces/: package.xml
mapper-packages/rssi_heatmap_generator_package/: package.xml  setup.cfg
mapper-packages/rssi_heatmap_generator_package/rssi_heatmap_generator_package/: node.py
mapper-packages/rssi_heatmap_generator_package/rssi_heatmap_generator_package/submodules/: generate_heatmap.py
mapper-packages/waypoint_publisher_package/: package.xml  setup.py
mapper_packages/: Dockerfile  run.sh
mapper_packages/waypoint_publisher_package/: setup.cfg
mapper_packages/waypoint_publisher_package/waypoint_publisher_package/: node.py
nav2-wifi-heatmap/: Dockerfile  ros_entrypoint.sh
nav2-wifi-heatmap/config/: nav2_slam_params.yaml
nav2-wifi-heatmap/src/nav2-wifi-heatmap-package/: CMakeLists.txt  package.xml  setup.cfg
nav2-wifi-heatmap/src/nav2-wifi-heatmap-package/config/: nav2_params.yaml
nav2-wifi-heatmap/src/nav2-wifi-heatmap-package/launch/: bringup_both.launch.py  navigation2.launch.py  slam_toolbox.launch.py
nav2-wifi-heatmap/src/nav2_read_rssi_at_waypoint_plugin/: nav2_read_rssi_at_waypoint.xml  package.xml
nav2-wifi-heatmap/src/nav2_read_rssi_at_waypoint_plugin/src/: read_rssi.cpp  read_rssi_at_waypoint.cpp
nav2-wifi-heatmap/src/rosbot_interfaces/msg/: RssiAtWaypoint.msg
nav2_read_rssi_at_waypoint/: CMakeLists.txt  nav2_read_rssi_at_waypoint.xml  package.xml
nav2_read_rssi_at_waypoint/include/nav2_read_rssi_at_waypoint/: read_rssi_at_waypoint.hpp
nav2_read_rssi_at_waypoint/src/: read_rssi.cpp  read_rssi_at_waypoint.cpp
read_rssi_at_waypoint/: CMakeLists.txt  package.xml  read_rssi_at_waypoint.xml
read_rssi_at_waypoint/src/: read_rssi_at_waypoint.cpp
rosbot_interfaces/: CMakeLists.txt  package.xml
rssi_heatmap_generator_package/: setup.py
rssi_heatmap_generator_package/rssi_heatmap_generator_package/: node.py
rssi_heatmap_generator_package/rssi_heatmap_generator_package/submodules/: generate_heatmap.py
waypoint_publisher/: Dockerfile  ros_entrypoint.sh
waypoint_publisher/waypoint_publisher_package/waypoint_publisher_package/: node.py
waypoint_publisher_package/: package.xml
waypoint_publisher_package/waypoint_publisher_package/: node.py
