<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>wifi_heatmap_nav2</name>
  <version>0.0.1</version>
  <description>Nav2 with additional plugins</description>
  <maintainer email="stanislaw.dudiak@husarion.com">root</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>navigation2</build_depend>
  <exec_depend>navigation2</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
