<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>nav2_read_rssi_at_waypoint</name>
  <version>1.0.0</version>
  <description>READ</description>
  <maintainer email="stanislaw.dudiak@husarion.com">SomeUser</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend>nav2_common</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>rclcpp_lifecycle</depend>  
  <depend>nav2_util</depend>
  <depend>nav2_core</depend>
  <depend>pluginlib</depend>
  <depend>rosbot_interfaces</depend>

  <exec_depend>nav2_bringup</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <nav2_waypoint_follower plugin="${prefix}/nav2_read_rssi_at_waypoint.xml" />
  </export>
</package>
